Fix: SelectPart options would overflow off the screen

--- a/packages/ui/style/inputwidgets.css
+++ b/packages/ui/style/inputwidgets.css
@@ -1,5 +1,7 @@
 div.rc-select-dropdown {
     z-index: 100000;
+    max-height: 300px;
+    overflow-y: scroll;
 }
 
 .m-Button {
